# skin-generator

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
